rewrite a very common and extremely inefficient regular expression pattern in a form that is equivalent but does not require a recursion.

this is several order of magnitude faster in any RE engine and prevents
libpcre from eating the stack.

BUG: 191736
CCBUG: 189904

svn path=/trunk/KDE/kdelibs/; revision=1088985